Fix site on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -49,6 +49,10 @@ p.small {
   text-align: center;
 }
 
+.hidden {
+  display: none;
+}
+
 .github-img {
   height: 0.6em;
   margin: 0 8px;
